--- a/backend/views/index.liquid
+++ b/backend/views/index.liquid
@@ -8,8 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-  ffffff1133355
-  <script src="js/index.js"></script>
+
+  <div id="app"></div>
+  <script type="module" src="js/index.js"></script>
 
 </body>
 </html>
