--- a/backend/views/index.liquid
+++ b/backend/views/index.liquid
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://unpkg.com/modern-normalize@0.6.0/modern-normalize.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple@3.3.1/dist/siimple.min.css">
   <link rel="stylesheet" href="css/index.css">
-  <title>Document</title>
+  <title>Reddit Pictures Organiser</title>
 </head>
 <body>
 
