--- a/backend/views/index.liquid
+++ b/backend/views/index.liquid
@@ -4,15 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://unpkg.com/modern-normalize@0.6.0/modern-normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple@3.3.1/dist/siimple.min.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="bundles/index.css">
   <title>Reddit Pictures Organiser</title>
 </head>
 <body>
 
   <div id="app"></div>
-  <script type="module" src="js/index.js"></script>
+  <script src="bundles/index.js"></script>
 
 </body>
 </html>
