--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,2 +1,6 @@
-body{background-color:goldenrod}
-a{color:rgb(214, 204, 66)}
+body{
+  background-color: antiquewhite;
+}
+h1 {
+  color: firebrick
+}
