--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,10 @@
-body{background-color:#daa520}h1{color:#8b008b}
+@import 'main.css';
+@import 'homepage.css';
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap')
