--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import 'main.css';
 @import 'homepage.css';
+@import 'subredditpage.css';
 
 
 
@@ -7,4 +8,3 @@
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap')
