--- a/css/subredditpage.css
+++ b/css/subredditpage.css
@@ -14,3 +14,11 @@
 .subredditPage .thumbnail{
   object-fit: cover;
 }
+
+.subredditPage .subLoadingNotifier{
+  color: #fff4e8;
+  width: 100%;
+  text-align: center;
+  margin-top: 60px;
+  opacity: 0.5;  
+}
