--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 @import 'main.css';
-@import 'homepage.css';
-@import 'subredditpage.css';
+@import 'homePage.css';
+@import 'subredditPage.css';
+@import 'managePage.css';
 
 
 
