--- a/src/css/managePage.css
+++ b/src/css/managePage.css
@@ -97,3 +97,24 @@
 .managePage .inputsContainer .removeSubInputContainer dialog menu button:nth-of-type(2){
   margin-left: 20px;
 }
+.managePage .toast{
+  border-radius: 2px;
+  position: fixed;
+  visibility: hidden;
+  padding: 16px;
+  bottom: 30px;
+  background-color:#d3869b  
+}
+.managePage .show{
+  visibility: visible;
+  animation: toastFadeIn 0.5s, toastFadeOut 0.6s 2.5s;
+}
+@keyframes toastFadeIn {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes toastFadeOut {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
