--- a/src/css/homePage.css
+++ b/src/css/homePage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
 }
-.homePage .manageWrapper{
+.homePage .navWrapper{
   display: flex;
   border: 2px solid #737373;
   width: 100%;
@@ -11,14 +11,14 @@
 /*
 Change color of stuff to #F49A87 when click/tap
 */
-.homePage .manageWrapper .folders{
+.homePage .navWrapper .folders{
   flex-grow: 1;
   padding: 10px;
   color: #fff4e8;
   text-align: center;
   border-right: 2px solid #737373;
 }
-.homePage .manageWrapper .manage{
+.homePage .navWrapper .manage{
   flex-grow: 1;
   padding: 10px;
   color: #fff4e8;
