Added swipe event handling for image viewer. Moved some functions into components for subredditPage and imageViewer as they were getting to long.

--- a/src/css/imageViewerPage.css
+++ b/src/css/imageViewerPage.css
@@ -18,6 +18,10 @@
   position: absolute;
   background-color: #595959;
 }
+.imageViewerPage .navWrapper > div{
+  overflow: hidden;
+  height: 22px;
+}
 .imageViewerPage .navWrapper .back{
   flex-grow: 1;
   padding: 10px;
