--- a/src/css/imageViewerPage.css
+++ b/src/css/imageViewerPage.css
@@ -1,6 +1,7 @@
 .imageViewerPage {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .imageViewerPage .navWrapper.hideNav{
   visibility: hidden;
@@ -9,14 +10,31 @@
   visibility: unset;
 }
 .imageViewerPage .navWrapper{
-  visibility: hidden;
   z-index: 1;
   position: absolute;  
   display: flex;
   border-bottom: 2px solid #737373;
   width: 100%;
-  position: absolute;
   background-color: #595959;
+  transform: translate3d(0, -100%, 0);
+  opacity: 0.8;
+}
+.imageViewerPage .navWrapper.show{
+  transform: translate3d(0, 0, 0);
+}
+.imageViewerPage .navWrapper.slideDown {
+  animation: slideDown 0.2s;
+}
+@keyframes slideDown {
+  0% {transform: translate3d(0, -100%, 0)} 
+  100% {transform: translate3d(0, 0, 0)}
+}
+.imageViewerPage .navWrapper.slideUp {
+  animation: slideUp 0.2s;
+}
+@keyframes slideUp {
+  0% {transform: translate3d(0, 0, 0)} 
+  100% {transform: translate3d(0, -100%, 0)}
 }
 .imageViewerPage .navWrapper > div{
   overflow: hidden;
@@ -55,6 +73,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+  width: 100vw;
 }
 @media (orientation: landscape) {
   .imageViewerPage .imageContainer img{
@@ -66,12 +85,24 @@
     max-width: 100vw;
   }
 }
+.imageViewerPage .toast{
+  border-radius: 2px;
+  position: fixed;
+  visibility: hidden;
+  padding: 16px;
+  bottom: 30px;
+  background-color:#d3869b  
+}
+.imageViewerPage .showToast{
+  visibility: visible;
+  animation: imageViewerToastFadeIn 0.5s, imageViewerToastFadeOut 0.6s 2.5s;
+}
+@keyframes imageViewerToastFadeIn {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
 
-/* .imageViewerPage .navWrapper .edit{
-  flex-grow: 1;
-  padding: 10px;
-  color: #fff4e8;
-  text-align: center;
-  outline: 1px solid #fff4e8;
-} */
-
+@keyframes imageViewerToastFadeOut {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
