--- a/src/css/imageViewerPage.css
+++ b/src/css/imageViewerPage.css
@@ -88,14 +88,58 @@
 }
 .imageViewerPage .foldersContainer{
   display: none;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
+  z-index: 2;
   margin-top: 42px; /* For the Nav above it.*/
 }
 .imageViewerPage .foldersContainer.show{
   display: flex;
+}
+.imageViewerPage .addToNewFolderContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.imageViewerPage .addToNewFolderContainer .addImageToNewFolder {
+  line-height: 25px;
+  padding: 6px;
+  max-width: 240px;
+  min-width: 240px;
+  border: 2px solid #737373;
+  font-size: 1rem;
+}
+.imageViewerPage .addToNewFolderContainer label {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #fff4e8;
+}
+/* .imageViewerPage .addToNewFolderContainer button {
+  display: inline-block;
+  padding: 8px 16px;
+  border: none;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  color: #fff4e8;
+  text-align: center;
+  background-color: #595959;
+  font-size: 1em;
+} */
+.imageViewerPage .existingFoldersContainer{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.imageViewerPage .addToNewFolderContainer + label{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  color: #fff4e8;
 }
 
 .imageViewerPage .folder{
