--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @import 'main.css';
 @import 'homePage.css';
-@import 'subredditPage.css';
+@import 'thumbnailsPage.css';
 @import 'managePage.css';
 @import 'foldersPage.css';
 @import 'imageViewerPage.css';
