--- a/src/css/thumbnailsPage.css
+++ b/src/css/thumbnailsPage.css
@@ -1,9 +1,9 @@
-.subredditPage {
+.thumbnailPage {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.subredditPage .navWrapper{
+.thumbnailPage .navWrapper{
   display: flex;
   border-bottom: 2px solid #737373;
   width: 100%;
@@ -11,21 +11,21 @@
   min-width: 100vw;
   /* margin-bottom: 10px; */
 }
-.subredditPage .navWrapper > *{
+.thumbnailPage .navWrapper > *{
   flex-grow: 1;
   padding: 10px;
   color: #fff4e8;
   text-align: center;
   border-right: 2px solid #737373;
 }
-.subredditPage .navWrapper > *.selectedSubTimeFilter{
+.thumbnailPage .navWrapper > *.selectedSubTimeFilter{
   outline: 1px solid #fff4e8;
 }
-.subredditPage .subredditImagesContainer{
+.thumbnailPage .thumbnailsImagesContainer{
   display: flex;
   flex-wrap: wrap;
 }
-.subredditPage .subredditImagesContainer .thumbnail-container{
+.thumbnailPage .thumbnailsImagesContainer .thumbnail-container{
   width: 100px;
   height: 100px;
   margin: 1px;
@@ -34,19 +34,19 @@
   justify-content: center;
   display: flex;
 }
-.subredditPage .subredditImagesContainer .thumbnail{
+.thumbnailPage .thumbnailsImagesContainer .thumbnail{
   object-fit: cover;
   overflow: hidden;
 }
 
-.subredditPage .subredditImagesContainer .subLoadingNotifier{
+.thumbnailPage .thumbnailsImagesContainer .subLoadingNotifier{
   color: #fff4e8;
   width: 100%;
   text-align: center;
   margin-top: 60px;
   opacity: 0.5;  
 }
-.subredditPage .toast{
+.thumbnailPage .toast{
   border-radius: 2px;
   position: fixed;
   visibility: hidden;
@@ -55,7 +55,7 @@
   background-color:#d3869b;
   text-transform: capitalize;
 }
-.subredditPage .showToast{
+.thumbnailPage .showToast{
   visibility: visible;
   animation: toastFadeIn 0.5s, toastFadeOut 0.6s 2.5s;
 }
