--- a/src/css/thumbnailsPage.css
+++ b/src/css/thumbnailsPage.css
@@ -18,6 +18,11 @@
   text-align: center;
   border-right: 2px solid #737373;
 }
+.thumbnailPage .navWrapper .back{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .thumbnailPage .navWrapper > *.selectedSubTimeFilter{
   outline: 1px solid #fff4e8;
 }
