--- a/src/css/imageEditorPage.css
+++ b/src/css/imageEditorPage.css
@@ -10,6 +10,7 @@
   border-bottom: 2px solid #737373;
   width: 100%;
   background-color: #595959;
+  z-index: 4;
 }
 .imageEditorPage nav > div{
   overflow: hidden;
@@ -32,7 +33,14 @@
   stroke-width: 5;
   stroke-miterlimit: 3;
 }
+.imageEditorPage .imageContainer {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 42px);
+}
 .imageEditorPage .imageToBeEdited {
-  max-height: 100vh;
+  max-height: calc(100vh - 42px);
   max-width: 100vw;
 }
