--- a/src/css/imageEditorPage.css
+++ b/src/css/imageEditorPage.css
@@ -44,12 +44,13 @@
   max-height: calc(100vh - 42px);
   max-width: 100vw;
 }
-.imageEditorPage .imageToBeEdited.hide{
-  display:none;
-}
-.imageEditorPage .imageContainer .cropper-tools{
+.imageEditorPage .imageContainer .cropperOverlay{
+  display: none;
   position: absolute;
-  bottom: 20px;
-  /* The slider is 287px in lenght so half that is about 143 */
-  left: calc(50vw - 143px);
+  z-index: 2;
+  height: 180px;
+  width: 180px;
+}
+.imageEditorPage .imageContainer .cropperOverlay.show{
+  display: flex;
 }
