--- a/src/css/imageEditorPage.css
+++ b/src/css/imageEditorPage.css
@@ -44,7 +44,22 @@
   max-height: calc(100vh - 42px);
   max-width: 100vw;
 }
-.imageEditorPage .imageContainer .cropperOverlay{
+.imageEditorPage .handle {
+  border-radius: 50%;
+  box-shadow: inset 0 0 0 10px;
+  opacity: 0.8;
+  cursor: grab;
+  color: tomato;
+  display: none;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+}
+.imageEditorPage .handle.show {
+  display: block;
+}
+
+/* .imageEditorPage .imageContainer .cropperOverlay{
   display: none;
   position: absolute;
   z-index: 2;
@@ -53,4 +68,4 @@
 }
 .imageEditorPage .imageContainer .cropperOverlay.show{
   display: flex;
-}
+} */
