Added navigation and folder delete to folder thumbnail view.

--- a/src/css/thumbnailsPage.css
+++ b/src/css/thumbnailsPage.css
@@ -26,6 +26,13 @@
 .thumbnailPage .navWrapper > *.selectedSubTimeFilter{
   outline: 1px solid #fff4e8;
 }
+.thumbnailPage .navWrapper > .folderName{
+  outline: 1px solid #fff4e8;
+}
+.thumbnailPage .navWrapper > .removeImageFromFolder{
+  display: flex;
+  justify-content: center;
+}
 .thumbnailPage .thumbnailsImagesContainer{
   display: flex;
   flex-wrap: wrap;
